# api-fenlei

./: .gitignore  .replit  AUTOMATION_README.md  README.md  README_DUAL_FRAMEWORK.md  api_routes.py  app.py  app_launcher.py  delete.md  dependencies.txt  image_classifier_automation.ps1  image_classifier_automation.sh  main.py  main_flask.py  ml_classifier.py  prediction_history.json  prediction_logger.py  pyproject.toml  replit.md  run_streamlit.py  streamlit_app.py  test_api.ps1  test_dual_framework.py  utils.py
static/css/: style.css
static/js/: app.js
templates/: index.html
